[package]
authors = {workspace = true}
description = "FRAME pallet template for defining custom runtime logic."
edition = {workspace = true}
homepage = "https://substrate.io"
license = "Unlicense"
name = "pallet-game"
publish = false
repository = {workspace = true}
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.0.0", default-features = false, features = [
  "derive",
]}
enumflags2 = {version = "0.7.5"}

frame-benchmarking = {workspace = true, default-features = false, optional = true}
frame-support = {workspace = true, default-features = false}
frame-system = {workspace = true, default-features = false}
pallet-balances = {workspace = true, default-features = false}
pallet-nfts = {workspace = true, default-features = false}
pallet-randomness-collective-flip = {workspace = true, default-features = false}
scale-info = {workspace = true, default-features = false, features = ["derive"]}
sp-core = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}
sp-std = {workspace = true, default-features = false}

# Local
gafi-support = {version = "4.0.0-dev", path = "../../support", default-features = false}

[dev-dependencies]
sp-core = {workspace = true, default-features = false}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true, default-features = false}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-runtime/std",
  "sp-core/std",
  "gafi-support/std",
  "pallet-nfts/std",
  "pallet-balances/std",
  "pallet-randomness-collective-flip/std",
  "sp-std/std",
]
try-runtime = ["frame-support/try-runtime"]
