[package]
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "FRAME pallet template for defining custom runtime logic."
edition = {workspace = true}
homepage = "https://substrate.io"
license = "MIT-0"
name = "game-randomness"
publish = false
repository = {workspace = true}
version = "4.0.0-dev"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = {package = "parity-scale-codec", version = "3.2.2", default-features = false, features = [
  "derive",
]}
log = {version = "0.4.19", default-features = false}

frame-benchmarking = {workspace = true, default-features = false, optional = true}
frame-support = {default-features = false, workspace = true}
frame-system = {vdefault-features = false, workspace = true}
scale-info = {version = "2.8.0", default-features = false, features = ["derive"]}
sp-core = {workspace = true, default-features = false}
sp-runtime = {workspace = true}
sp-io = {workspace = true, default-features = false}
pallet-insecure-randomness-collective-flip = {workspace = true, default-features = false}

gafi-support = {version = "4.0.0-dev", path = "../../support", default-features = false}

[dev-dependencies]
sp-core = {workspace = true}
sp-io = {workspace = true, default-features = false}
sp-runtime = {workspace = true}

[features]
default = ["std"]
runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
std = [
  "codec/std",
  "frame-benchmarking?/std",
  "frame-support/std",
  "frame-system/std",
  "scale-info/std",
  "sp-core/std",
  "gafi-support/std",
  "sp-runtime/std",
  "sp-io/std",
]
try-runtime = ["frame-support/try-runtime"]
