[package]
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "gafi-chain-spec"
repository = "https://github.com/grindytech/cumulus/"
version = "0.1.0"

[dependencies]
clap = {version = "3.1", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.0.0"}
derive_more = "0.99.2"
futures = '0.3'
hex-literal = "0.3.4"
jsonrpc-core = "18.0.0"
jsonrpsee = {version = "0.14.0", features = ["server"]}
log = "0.4.16"
serde = {version = "1.0.132", features = ["derive"]}
serde_json = "1.0.59"

# Frontier
fc-consensus = {workspace = true}
fc-db = {workspace = true}
fc-mapping-sync = {workspace = true}
fc-rpc = { workspace = true}
fc-rpc-core = {workspace = true}
fp-consensus = {workspace = true}
fp-evm = {workspace = true, default-features = false}
fp-rpc = {workspace = true}
fp-storage = {workspace = true}
pallet-ethereum = {workspace = true}
pallet-evm = {workspace = true}

# Substrate
frame-benchmarking = {workspace = true}
frame-benchmarking-cli = {workspace = true}
pallet-transaction-payment-rpc = {workspace = true}
sc-basic-authorship = {workspace = true}
sc-chain-spec = {workspace = true}
sc-cli = {workspace = true}
sc-client-api = {workspace = true}
sc-consensus = {workspace = true}
sc-consensus-aura = {workspace = true, optional = true}
sc-consensus-manual-seal = {workspace = true, optional = true}
sc-executor = {workspace = true}
sc-keystore = {workspace = true}
sc-network = {workspace = true}
sc-rpc = {workspace = true}
sc-rpc-api = {workspace = true}
sc-service = {workspace = true}
sc-telemetry = {workspace = true}
sc-tracing = {workspace = true}
sc-transaction-pool = {workspace = true}
sc-transaction-pool-api = {workspace = true}
sp-api = {workspace = true}
sp-block-builder = {workspace = true}
sp-blockchain = {workspace = true}
sp-consensus = {workspace = true}
sp-consensus-aura = {workspace = true}
sp-core = {workspace = true}
sp-inherents = {workspace = true}
sp-keystore = {workspace = true}
sp-offchain = {workspace = true}
sp-runtime = {workspace = true}
sp-session = {workspace = true}
sp-timestamp = {workspace = true}
sp-transaction-pool = {workspace = true}
substrate-frame-rpc-system = {workspace = true}
substrate-prometheus-endpoint = {workspace = true}
try-runtime-cli = {workspace = true}
sp-std = {workspace = true}
sp-finality-grandpa = {workspace = true}

# Polkadot
polkadot-cli = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
polkadot-parachain = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
polkadot-primitives = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
polkadot-service = {git = "https://github.com/paritytech/polkadot", branch = "release-v0.9.37"}
xcm = {git = "https://github.com/paritytech/polkadot", default-features = false, branch = "release-v0.9.37"}

# Cumulus
cumulus-client-cli = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-collator = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-consensus-aura = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-consensus-common = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-consensus-relay-chain = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-network = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-client-service = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-primitives-core = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-primitives-parachain-inherent = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-relay-chain-inprocess-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-relay-chain-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}
cumulus-relay-chain-rpc-interface = {git = "https://github.com/paritytech/cumulus", branch = "polkadot-v0.9.37"}

# Runtime
gari-runtime = {path = "../../runtime/gari", default-features = false, features = ["std"]}

# Local
gafi-primitives = {path = "../../primitives"}

[features]
default = ["std"]
std = []
