[package]
authors = ["Anonymous"]
description = "A new Cumulus FRAME-based Substrate Node, ready for hacking together a parachain."
edition = "2021"
homepage = "https://substrate.io"
license = "Unlicense"
name = "gafi-local"
repository = "https://github.com/grindytech/cumulus/"
version = "0.1.0"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = "0.1"
clap = {version = "3.1", features = ["derive"]}
codec = {package = "parity-scale-codec", version = "3.1", features = ["derive"]}
futures = '0.3'
hex-literal = '0.3'
jsonrpc-core = "18.0.0"
jsonrpc-pubsub = "18.0.0"
jsonrpsee = {version = "0.14.0", features = ["server", "macros"]}
log = "0.4.8"
serde_json = "1.0.59"

# Frontier
fc-cli = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-consensus = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-db = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-mapping-sync = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-rpc = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fc-rpc-core = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-consensus = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-dynamic-fee = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-evm = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-rpc = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
fp-storage = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-base-fee = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-dynamic-fee = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-ethereum = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}
pallet-evm = {git = "https://github.com/grindytech/frontier", branch = "gafi-polkadot-v0.9.37"}

# Substrate
frame-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
pallet-transaction-payment = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-client-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
sc-consensus-manual-seal = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37", optional = true}
sc-executor = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-keystore = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-network = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-service = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-telemetry = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-transaction-pool = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-transaction-pool-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-consensus = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-consensus-aura = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-core = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-finality-grandpa = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-inherents = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-keyring = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-runtime = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-io = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-timestamp = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

# These dependencies are used for the node template's RPCs
pallet-transaction-payment-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-basic-authorship = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-rpc = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sc-rpc-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-api = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-block-builder = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
sp-blockchain = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
substrate-frame-rpc-system = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

# These dependencies are used for runtime benchmarking
frame-benchmarking = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}
frame-benchmarking-cli = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

pallet-player = { version = "4.0.0-dev", default-features = false, path = "../../pallets/player" }
pallet-player-rpc-runtime-api = { version = "4.0.0-dev", default-features = false, path = "../../pallets/player/runtime-api" }

# Local Dependencies
devnet = {path = "../../runtime/devnet", default-features = false, features = ["std"]}
gafi-primitives = {path = "../../primitives", default-features = false}

[build-dependencies]
substrate-build-script-utils = {git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.37"}

[features]
aura = [
  "sc-consensus-aura",
  "devnet/aura",
]
default = ["aura"]
manual-seal = [
  "sc-consensus-manual-seal",
  "devnet/manual-seal",
]

with-dev = [
  "devnet/with-dev"
]

# rpc_binary_search_estimate = ["fc-rpc/rpc_binary_search_estimate"]
runtime-benchmarks = [
  "devnet/runtime-benchmarks",
]
